Refs #111968 fixed jump in portal-column-content width - removed max width 800px since that was added for   the redesign pages where we have other code in place

--- a/eea/design/skins/eeadesign_styles/eea-responsive.scss
+++ b/eea/design/skins/eeadesign_styles/eea-responsive.scss
@@ -578,14 +578,6 @@ $input-color: #f3f3f3;
     width: 49%;
     }
   }
-
-@media screen and (min-width: 768px) and (max-width: 990px) {
-  #portal-column-content {
-    width: 100%;
-    max-width: 800px;
-  }
-}
-
 @media screen and (min-width: 750px) and (max-width: 799px) {
   .width-full .photoAlbumEntry {
     width: 24.2%;
